<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweety</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Déconnexion</string>
    <string name="action_search">Recherche</string>
    <string name="action_follow">Suivre un utilisateur</string>
    <string name="welcome_text">Bienvenue sur l\'application Tweety !</string>
    <string name="button_connect">Connexion</string>
    <string name="button_subscribe">Creer un compte</string>
    <string name="handle">Login</string>
    <string name="password">Mot de passe</string>
    <string name="login">Connexion</string>
    <string name="new_tweety">Lâchez vous !!</string>
    <string name="required">Requis</string>
    <string name="login_success">Connexion réussie !</string>
    <string name="login_error">Connexion échouée, veuillez réessayer</string>
    <string name="title_activity_connection">Connection</string>
    <string name="title_activity_sign_in">S\'enregistrer</string>
    <string name="password_confirm">Confirmation</string>
    <string name="email">e-mail</string>
    <string name="picture_url">Url Photo</string>
    <string name="connecting">Veuillez patienter svp ...</string>
    <string name="title_activity_home">Activités</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Message</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="followings">followings : %1d</string>
    <string name="followers">followers : %1d</string>
    <string name="followers_count_button">%1d\nfollowers</string>
    <string name="followings_count_button">%1d\nfollowings</string>
    <string name="tweeties" type="id">Timeline</string>
    <string name="discover" type="id">Decouverte</string>
    <string name="title_activity_tweets">Tweets</string>
    <string name="title_activity_followers">Followers</string>
    <string name="unfollow">Unfollow</string>
    <string name="unfollow_confirm">Attention, Vous allez unfollow %s !</string>
    <string name="confirm">Confirmation</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="grk">Guy Rodrigue Koffi</string>

</resources>
