<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tweety="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.grk.tweety.activity.HomeActivity">

    <!-- Follow button -->
    <item android:id="@+id/action_details"
        android:icon="@drawable/ic_action_person"
        android:title="@string/action_follow"
        tweety:showAsAction="ifRoom" />

    <!-- Search button -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        tweety:showAsAction="ifRoom" />



    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" tweety:showAsAction="never" />
</menu>
