<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="fr.grk.tweety.activity.SignInActivity">


    <EditText
        android:id="@+id/handle"
        android:hint="@string/handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_marginTop="@dimen/slim_padding"
        android:layout_marginBottom="@dimen/slim_padding">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_marginTop="@dimen/slim_padding"
        android:layout_marginBottom="@dimen/slim_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password_confirm"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_marginTop="@dimen/slim_padding"
        android:layout_marginBottom="@dimen/slim_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_marginBottom="@dimen/slim_padding"
        />

    <EditText
        android:id="@+id/picture"
        android:hint="@string/picture_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_marginBottom="@dimen/slim_padding"
        />



    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:textColor="@android:color/white"
        android:text="@string/button_subscribe"
        android:layout_height="wrap_content" />

</LinearLayout>
