<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="fr.grk.tweety.activity.LoginActivity">

    <EditText
        android:id="@+id/handle"
        android:hint="@string/handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:text="bonclay7"
        android:layout_marginBottom="5dp"><requestFocus/></EditText>

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="@dimen/padding"
        android:layout_width="match_parent"
        android:text="aqwzsxedc"
        android:layout_height="wrap_content"/> -->

    <Button
        android:id="@+id/connect_button"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:textColor="@android:color/white"
        android:text="@string/login"
        android:layout_height="wrap_content" />

</LinearLayout>
