<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    
    


    <ImageView
        android:id="@+id/tweety_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/red_bird_hi"
        android:layout_centerInParent="true"
        android:paddingBottom="@dimen/big_padding"/>
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textColor="@android:color/black"
        android:paddingBottom="@dimen/padding"
        android:layout_below="@+id/tweety_icon"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:gravity="bottom|left"
        android:layout_alignParentBottom="true"
        android:text="@string/button_connect"
        android:textColor="@color/material_red_500"
        style="?android:borderlessButtonStyle"
        />
    <Button
        android:id="@+id/signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom|left"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/button_subscribe"
        android:textColor="@color/material_red_500"
        style="?android:borderlessButtonStyle"
        />



</RelativeLayout>
